--- a/src/main/resources/templates/customerList.html
+++ b/src/main/resources/templates/customerList.html
@@ -1,123 +1,63 @@
-<!doctype html>
-<html lang="en" xmlns:th="https://www.thymeleaf.com" ng-app="myApp" ng-controller="rootController">
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>SBM Home</title>
-	
-	<!-- jQuery, Popper.js ve Bootstrap JS -->
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-		crossorigin="anonymous"></script>
-	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js"
-		integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-		crossorigin="anonymous"></script>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js"
-		integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-		crossorigin="anonymous"></script>
-		
-	<!-- Font Awesome ve Boxicons ikon kütüphaneleri -->	
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-	<script src="https://unpkg.com/@phosphor-icons/web"></script>
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
-		integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-	<link href="https://css.gg/css" rel="stylesheet" />
-		
-	<!-- AngularJS -->
-	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
-	
-	<!-- Boxicons CSS -->
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>User Page</title>
+	<!-- Bootsrapt -->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+	<link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+	<!-- İcon -->
 	<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-	
-	<link rel="stylesheet" href="" th:href="@{/css/style.css}">
-	
-
-	<style>
-		#icon-trash {
-			color: red;
-			font-size: 22px;
-		}
-
-		#icon-trash:hover {
-			color: rgb(255, 62, 62);
-		}
-
-		#icon-image {
-			font-size: 20px;
-		}
-
-		#icon-edit {
-			color: blue;
-			font-size: 20px;
-		}
-
-		#icon-edit:hover {
-			color: rgb(69, 112, 222);
-		}
-
-		button {
-			border: none;
-			background: none;
-			margin-left: 50px;
-		}
-
-		.modal-btn {
-			padding: 10px;
-			font-size: 15px;
-		}
-
-		.form-control {
-			width: 200px;
-		}
-
-		#kdvRate {
-			width: 200px;
-			padding: 8px;
-			font-weight: 400;
-		}
-	</style>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+	<!-- CSS -->
+	<link rel="stylesheet" th:href="@{/css/register.css}" href="src/main/resources/static/css/register.css">
+	<!-- Angularjs -->
+	<script src="js/angular.min.js"></script>
 
 </head>
 
 <body>
-	<!-- Navbar -->
-	<nav class="navbar navbar-expand-lg navbar-light bg-light py-3">
-		<div class="container">
-			<a class="navbar-brand text-black" href="/index">SBM</a>
+	<!--Navbar-->
+	<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+		<div class="container-fluid px-5">
+			<a class="navbar-brand" href="#">Logo</a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
 				data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
 				aria-label="Toggle navigation">
-				<span id="bar" data-lucide="menu"></span>
+				<span class="navbar-toggler-icon"></span>
 			</button>
-			<div class="collapse navbar-collapse" id="navbarSupportedContent">
-				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+			<div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
+				<ul class="navbar-nav mb-2 mb-lg-0 text-center">
 					<li class="nav-item">
-						<a class="nav-link active" href="/customerList">See Customer List</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="/customerRegisterForm">New Customer Register</a>
-					</li>
-					<li class="nav-item dropdown">
-						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-							data-bs-toggle="dropdown" aria-expanded="false">
-							Taxes
+						<a class="nav-link active" aria-current="page" href="#">
+							<i class='bx bxs-home'></i>
+							Home
 						</a>
-						<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-							<li><a class="dropdown-item" ng-click="openModal()">KDV Rate</a>
-							</li>
-							<li>
-								<a class="dropdown-item" href="#">
-									ÖTV Rate
-								</a>
-							</li>
-						</ul>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Products</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Features</a>
 					</li>
 				</ul>
 			</div>
+			<div class="operations">
+				<a href="">
+					<i class='bx bxs-user-circle login-icon'></i>
+					Login
+				</a>
+				<a href="">
+					<i class='bx bxs-user-plus register-icon'></i>
+					Register
+				</a>
+			</div>
 		</div>
 	</nav>
-	<!--End Navbar-->
+	<!--	End Navbar-->
 
 	<!--Modal-->
 	<div id="myModal" class="modal fade" tabindex="-1" role="dialog">
@@ -169,71 +109,239 @@
 		var healthKdv = /*[[${healthKdv}]]*/ {};
 	</script>
 
+	<div class="user-page-wrapper">
+      <div class="user-page-main">
+        <div class="user-title">
+            <div class="username-settings">
+              <a href="user-page.html"><span class="badge text-bg-secondary"><i class='bx bx-arrow-back'></i></span></a>
+              <span class="username-text">Nuricanbrdmr</span>
+            </div>
+            <div class="select-type">
+              <a href="#"><span class="badge text-bg-info">Change KDV Rate</span></a>
+            </div>
+        </div>
+        <div class="alert alert-warning insurance-error d-flex align-items-center" role="alert">
+          <i class='bx bxs-error' ></i>
+          <div>
+            An example warning alert with an icon
+          </div>
+        </div>
+        <div class="user-page">
 
-	<div class="container mt-5">
-		<table class="table table-hover text-center">
-			<thead>
-				<tr>
-					<th scope="col">Id</th>
-					<th scope="col">TC</th>
-					<th scope="col">Birth Date</th>
-					<th scope="col">Email</th>
-					<th scope="col">First Name</th>
-					<th cope="col">Last Name</th>
-					<th cope="col">Province</th>
-					<th cope="col">District</th>
-					<th scope="col">Insurance Type</th>
-					<th scope="col">Health Info List</th>
-					<th scope="col">Home List</th>
-					<th scope="col">Car List</th>
-					<th scope="col">Update</th>
-					<th scope="col">Delete</th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr th:each="c :${customer}">
-					<td th:text="${c.customerId}"></td>
-					<td th:text="${c.tc}"></td>
-					<td style="width: 112px;" th:text="${c.birth}"></td>
-					<td th:text="${c.email}"></td>
-					<td th:text="${c.firstname}"></td>
-					<td th:text="${c.lastname}"></td>
-					<td th:text="${c.province}"></td>
-					<td th:text="${c.district}"></td>
-					<td><a th:href="@{/selectType(customerId=${c.customerId})}"><span
-								class="badge text-bg-primary fs-6">Select Type</span></a></td>
-					<td><button class="mx-auto"><a
-								th:href="@{/healthInfoList/{customerId}(customerId=${c.customerId})}"><i id="icon-image"
-									style="color: #bd0000" class="fa-solid fa-heart-circle-plus"></i></a></button></td>
-					<td><button class="mx-auto"><a th:href="@{/homeList/{customerId}(customerId=${c.customerId})}"><i
-									class="fa-solid fa-house" id="icon-image"></i></a></button></td>
-					<td><button class="mx-auto"><a th:href="@{/carList/{customerId}(customerId=${c.customerId})}"><i
-									class="fa-solid fa-car" id="icon-image"></i></a></button></td>
-					<td><button class="mx-auto"><a
-								th:href="@{/editCustomer/{customerId}(customerId=${c.customerId})}"><i id="icon-edit"
-									class="fa-regular fa-pen-to-square"></i></a></button></td>
-					<td><button class="mx-auto"><a
-								th:href="@{/deleteCustomer/{customerId}(customerId=${c.customerId})}"><i id="icon-trash"
-									class="bx bx-trash"></i></a></button></td>
-				</tr>
-			</tbody>
-		</table>
+	<!-- User Tablo -->
+			<div class="user-insurances-admin">
+				<div class="card mb-4">
+					<ul class="nav nav-tabs" id="myTab" role="tablist">
+						<li class="nav-item" role="presentation">
+							<button class="nav-link active" id="health-tab" data-bs-toggle="tab"
+								data-bs-target="#health-tab-pane" type="button" role="tab"
+								aria-controls="health-tab-pane" aria-selected="true">Health Info</button>
+						</li>
+						<li class="nav-item" role="presentation">
+							<button class="nav-link" id="home-tab" data-bs-toggle="tab" data-bs-target="#home-tab-pane"
+								type="button" role="tab" aria-controls="home-tab-pane" aria-selected="false">Home
+								Info</button>
+						</li>
+						<li class="nav-item" role="presentation">
+							<button class="nav-link" id="car-tab" data-bs-toggle="tab" data-bs-target="#car-tab-pane"
+								type="button" role="tab" aria-controls="car-tab-pane" aria-selected="false">Car
+								Info</button>
+						</li>
+					</ul>
+					<div class="tab-content" id="myTabContent">
+						<div class="tab-pane fade show active" id="health-tab-pane" role="tabpanel"
+							aria-labelledby="health-tab" tabindex="0">
+							<table class="table">
+								<thead>
+									<tr>
+										<th scope="col">Health Id</th>
+										<th scope="col">Customer Id</th>
+										<th scope="col">Job</th>
+										<th scope="col">For Who</th>
+										<th scope="col">SGK</th>
+										<th cope="col">Height</th>
+										<th cope="col">Weight</th>
+										<th cope="col">Lifestyle Habits</th>
+										<th scope="col">Past Operation</th>
+										<th cope="col">Period</th>
+										<th scope="col">Delete</th>
+										<th scope="col">See Insurance Details</th>
+									</tr>
+								</thead>
+								<tbody>
+									<tr th:each="h :${health}">
+										<td th:text="${h.healthId}"></td>
+										<td th:text="${h.customerId}"></td>
+										<td th:text="${h.job}"></td>
+										<td th:text="${h.forWho}"></td>
+										<td th:text="${h.sgk}"></td>
+										<td th:text="${h.height}"></td>
+										<td th:text="${h.weight}"></td>
+										<td th:text="${h.smokingOrAlcohol}"></td>
+										<td th:text="${h.pastOperation}"></td>
+										<td th:text="${h.period}"></td>
+										<td><button class="mx-auto"><a
+													th:href="@{/deleteHealthInfo/{id}(id=${h.healthId})}"><i
+														id="icon-trash" class="bx bx-trash trash"></i></a></button></td>
+										<td><button class="mx-auto"><a
+													th:href="@{/seeHealthInsuranceDetails/{id}(id=${h.healthId})}"><i
+														class="fa-solid fa-ellipsis"></i></a></button></td>
+									</tr>
+								</tbody>
+							</table>
+						</div>
+
+						<div class="tab-pane fade" id="home-tab-pane" role="tabpanel" aria-labelledby="home-tab"
+							tabindex="0">
+							<table class="table">
+								<thead>
+									<tr>
+										<th scope="col">Home Id</th>
+										<th scope="col">Customer Id</th>
+										<th scope="col">Construction Type</th>
+										<th scope="col">Usage Type</th>
+										<th scope="col">Province</th>
+										<th cope="col">District</th>
+										<th cope="col">Neighbourhood</th>
+										<th cope="col">Building Number</th>
+										<th scope="col">Apartment</th>
+										<th cope="col">Flat Area (m2)</th>
+										<th scope="col">Floor</th>
+										<th scope="col">Building Age</th>
+										<th scope="col">Owner Title</th>
+										<th scope="col">Delete</th>
+										<th scope="col">See Insurance Details</th>
+									</tr>
+								</thead>
+								<tbody>
+									<tr th:each="h :${home}">
+										<td th:text="${h.homeId}"></td>
+										<td th:text="${h.customerId}"></td>
+										<td th:text="${h.buildingType}"></td>
+										<td th:text="${h.typeOfUse}"></td>
+										<td th:text="${h.province}"></td>
+										<td th:text="${h.district}"></td>
+										<td th:text="${h.neighbourhood}"></td>
+										<td th:text="${h.buildingNumber}"></td>
+										<td th:text="${h.apartment}"></td>
+										<td th:text="${h.flatArea}"></td>
+										<td th:text="${h.floor}"></td>
+										<td th:text="${h.buildingAge}"></td>
+										<td th:text="${h.insurerTitle}"></td>
+										<td><button class="mx-auto"><a th:href="@{/deleteHome/{id}(id=${h.homeId})}"><i
+														id="icon-trash" class="bx bx-trash trash"></i></a></button></td>
+										<td><button class="mx-auto"><a
+													th:href="@{/seeHomeInsuranceDetails/{id}(id=${h.homeId})}"><i
+														class="fa-solid fa-ellipsis"></i></a></button></td>
+									</tr>
+								</tbody>
+							</table>
+						</div>
+						<div class="tab-pane fade" id="car-tab-pane" role="tabpanel" aria-labelledby="car-tab"
+							tabindex="0">
+							<table class="table">
+								<thead>
+									<tr>
+										<th scope="col">Id</th>
+										<th scope="col">Customer Id</th>
+										<th scope="col">License Plate</th>
+										<th scope="col">Usage Type</th>
+										<th scope="col">Purpose of Usage</th>
+										<th cope="col">Brand</th>
+										<th cope="col">Fuel Type</th>
+										<th cope="col">Engine Size</th>
+										<th scope="col">Seating Capacity</th>
+										<th scope="col">Delete</th>
+										<th scope="col">See Insurance Details</th>
+									</tr>
+								</thead>
+								<tbody>
+									<tr th:each="c :${car}">
+										<td th:text="${c.id}"></td>
+										<td th:text="${c.customerId}"></td>
+										<td>
+											<span th:text="${c.plate1}"></span>
+											<span th:text="${c.plate2}"></span>
+											<span th:text="${c.plate3}"></span>
+										</td>
+										<td th:text="${c.type}"></td>
+										<td th:text="${c.purpose}"></td>
+										<td th:text="${c.brand}"></td>
+										<td th:text="${c.fuelType}"></td>
+										<td th:text="${c.engineSize}"></td>
+										<td th:text="${c.seatCapacity}"></td>
+
+										<td><button class="mx-auto"><a th:href="@{/deleteCar/{id}(id=${c.id})}"><i
+														id="icon-trash" class="bx bx-trash trash"></i></a></button></td>
+										<td><button class="mx-auto"><a
+													th:href="@{/seeCarInsuranceDetails/{id}(id=${c.id})}"><i
+														class="fa-solid fa-ellipsis"></i></a></button></td>
+									</tr>
+								</tbody>
+							</table>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 	</div>
+</div>
 
-
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-		integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
-		crossorigin="anonymous"></script>
-	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-		integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-		crossorigin="anonymous"></script>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"
-		integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS"
-		crossorigin="anonymous"></script>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
-		integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
-		crossorigin="anonymous"></script>
 	<script src="/js/app.js"></script>
+	
+	<footer class="py-4">
+		<div class="row container mx-auto pt-4">
+			<div class="footer-one col-lg-3 col-md-5 col-12 mb-3">
+				<img src="img/logo.png" alt="">
+				<p class="pt-3">Protect your future with reliable insurance coverage from our trusted insurance
+					company..</p>
+			</div>
+			<div class="footer-one col-lg-3 col-md-6 col-12 mb-3">
+				<h5 class="pb-2">Featured</h5>
+				<ul class="text-uppercase list-unstyled">
+					<li><a href="#">Traffic Insurance</a></li>
+					<li><a href="#">Comprehensive Insurance</a></li>
+					<li><a href="#">Health Insurance</a></li>
+					<li><a href="#">Earthquake Insurance</a></li>
+				</ul>
+			</div>
+			<div class="footer-one col-lg-3 col-md-6 col-12 mb-3">
+				<h5 class="pb-2">Contact Us</h5>
+				<div>
+					<h6 class="text-uppercase">Address</h6>
+					<p>Istanbul, Turkey</p>
+				</div>
+				<div>
+					<h6 class="text-uppercase">Github</h6>
+					<p>https://github.com/edamuutlu</p>
+					<p>https://github.com/nuricanbrdmr</p>
+				</div>
+				<div>
+					<h6 class="text-uppercase">Email</h6>
+					<p>edamuutlu@gmail.com</p>
+					<p>nuricanb6@gmail.com</p>
+				</div>
+			</div>
+			<div class="footer-one col-lg-3 col-md-6 col-12">
+				<div class="col-lg-4 col-md-6 col-12 mb-3">
+					<h5 class="pb-2">Follow Us</h5>
+					<a href="#"><i class="fa-brands fa-lg fa-facebook"></i></a>
+					<a href="#"><i class="fa-brands fa-lg fa-instagram"></i></a>
+					<a href="#"><i class="fa-brands fa-lg fa-twitter"></i></a>
+				</div>
+				<div class="col-lg-3 col-md-6 col-12 mb-4">
+					<img src="img/payment.png" alt="">
+				</div>
+			</div>
+			<div class="copyright mt-2">
+				<div class="row container mx-auto">
+					<div class="col-lg-4 col-md-6 col-12 mb-2">
+						<p>Eda Nur Mutlu eInsurance © 2023. All Rights Reserved</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</footer>
 </body>
 
 </html>
