--- a/src/main/resources/templates/seeCarInsuranceDetails.html
+++ b/src/main/resources/templates/seeCarInsuranceDetails.html
@@ -18,14 +18,6 @@
 	<!-- Angularjs -->
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
 
-	<!--	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"-->
-	<!--		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"-->
-	<!--		crossorigin="anonymous"></script>-->
-	<!--	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"-->
-	<!--		integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">	-->
-	<!--	<link href="https://css.gg/css" rel="stylesheet" />-->
-	<!--	<link rel="stylesheet" href="" th:href="@{/css/style.css}">-->
-
 	<style>
 		#period {
 			width: 200px;
@@ -125,10 +117,10 @@
 		<div class="user-page-main" th:each="c :${customer}">
 			<div class="user-title">
 				<div class="username-settings">
-					<a th:href="@{/userPage/{username}(username=${c.username})}">
+					<a th:href="@{'/userPage/' + ${c.username} + '/' + ${'admin'}}">
 						<span class="badge text-bg-secondary"><i class='bx bx-arrow-back'></i></span>
 					</a>
-					<span class="username-text" th:text="${c.username}"></span>
+					<span class="username-text" th:text="${username}"></span>
 				</div>
 				<!--				<div class="select-type">-->
 				<!--					<a href="#"><span class="badge text-bg-info">Renew Car Insurance</span></a>-->
