--- a/src/main/resources/static/css/register.css
+++ b/src/main/resources/static/css/register.css
@@ -657,6 +657,12 @@ body .user-page-wrapper .user-page-main .user-page .user-insurances-admin .card 
   align-items: center;
   font-size: 20px;
 }
+body .user-page-wrapper .user-page-main .user-page .user-insurances-admin .card .table td button .dots {
+  color: #0d6efd;
+}
+body .user-page-wrapper .user-page-main .user-page .user-insurances-admin .card .table td button .dots:hover {
+  color: rgba(69, 112, 222, 0.6784313725);
+}
 body .user-page-wrapper .user-page-main .user-page .user-insurances-admin .card .table td button .heart {
   color: #bd0000;
 }
