Admin and User Page Fixed

--- a/src/main/resources/templates/customerList.html
+++ b/src/main/resources/templates/customerList.html
@@ -45,11 +45,11 @@
 				</ul>
 			</div>
 			<div class="operations">
-				<a href="">
+				<a href="/login">
 					<i class='bx bxs-user-circle login-icon'></i>
 					Login
 				</a>
-				<a href="">
+				<a href="/customerRegister">
 					<i class='bx bxs-user-plus register-icon'></i>
 					Register
 				</a>
@@ -114,7 +114,7 @@
 				<div class="username-settings">
 					<a href="user-page.html"><span class="badge text-bg-secondary"><i
 								class='bx bx-arrow-back'></i></span></a>
-					<span class="username-text">Nuricanbrdmr</span>
+					<span class="username-text">Admin</span>
 				</div>
 				<div class="select-type">
 					<a href="#"><span class="badge text-bg-info">Change KDV Rate</span></a>
