--- a/src/main/resources/templates/seeHealthInsuranceDetails.html
+++ b/src/main/resources/templates/seeHealthInsuranceDetails.html
@@ -22,7 +22,7 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
-<body>
+<body ng-app="myApp" ng-controller="UserPageController">
 	<!--Navbar-->
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
 		<div class="container-fluid px-5">
@@ -76,8 +76,14 @@
 	<div class="user-page-wrapper">
 		<div class="user-page-main" th:each="c :${customer}">
 			<div class="user-title">
+				<script th:inline="javascript">
+					var isAdmin = /*[[${username}]]*/ '';
+				</script>
 				<div class="username-settings">
-					<a th:href="@{'/userPage/' + ${c.username} + '/' + ${'admin'}}">
+					<a ng-if="isAdmin == 'admin'" th:href="@{'/userPage/' + ${c.username} + '/' + ${'admin'}}">
+						<span class="badge text-bg-secondary"><i class='bx bx-arrow-back'></i></span>
+					</a>
+					<a ng-if="isAdmin != 'admin'" th:href="@{'/userPage/' + ${c.username}}">
 						<span class="badge text-bg-secondary"><i class='bx bx-arrow-back'></i></span>
 					</a>
 					<span class="username-text" th:text="${username}"></span>
